--- a/history/templates/quiz_teacher_result.html
+++ b/history/templates/quiz_teacher_result.html
@@ -53,6 +53,70 @@
                         <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
                     </div>
                 </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
+                <div class="question-accuracy-1">
+                    <p class="question-number-1">Q1</p>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                        <img class="question-state-2" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
+                        <img class="question-state-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
