--- a/history/static/css/quiz_teacher_result.css
+++ b/history/static/css/quiz_teacher_result.css
@@ -3,7 +3,13 @@ main{
     justify-content: center;
     align-items: center;
     width: 100vw;
+
 }
+
+body{
+    overflow-x: hidden;
+}
+
 .section{
     display: flex;
     flex-direction: column;
@@ -12,8 +18,6 @@ main{
     /* height: 800px; */
     align-items: center;
     justify-content: start;
-    border: 1px solid;
-    border-radius: 20px;
 }
 
 .quiz-text{
@@ -63,7 +67,7 @@ main{
     border-radius: 60px 0px 0px 60px;
 
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .student-name-accuracy{
@@ -77,7 +81,9 @@ main{
     width: 816px;
     height: 74px;
 
-    border: 2px solid #000000;
+    border-left: 2px solid #000000;
+    border-top: 2px solid #000000;
+    border-bottom: 2px solid #000000;
     background: #607C94;
 
     align-self: stretch;
@@ -134,7 +140,6 @@ main{
     height: 70px;
 
     background: #607C94;
-    border-right: 2px solid black;
 
     order: 1;
     flex-grow: 1;
@@ -166,7 +171,7 @@ gap: 10px;
 width: 816px;
 height: 100px;
 background: #607C94;
-border-right: 2px solid black;
+
 
 order: 1;
 align-self: stretch;
@@ -224,7 +229,7 @@ align-self: stretch;
 flex-grow: 1;
 
 background: #607C94;
-border-right: 2px solid black;
+
 }
 
 .quiz-student-accuracy-text-1{
@@ -261,6 +266,11 @@ align-self: stretch;
 
 overflow-x: scroll;
 overflow-y: scroll;
+}
+
+.accuracy-info::-webkit-scrollbar{
+    width: 0;
+    background: transparent;
 }
 
 .question-accuracy-1{
