--- a/project/static/css/base.css
+++ b/project/static/css/base.css
@@ -1,10 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pridi:wght@200;300;400;500;600;700&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap');
-
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Regular.ttf") format("truetype");
+    font-weight: 400;
+    unicode-range: 'U+0400-04FF', 'U+0500-052F', 'U+2DE0-2DFF';
+}
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Medium.ttf") format("truetype");
+    font-weight: 500;
+    unicode-range: 'U+0400-04FF', 'U+0500-052F', 'U+2DE0-2DFF';
+}
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-SemiBold.ttf") format("truetype");
+    font-weight: 600;
+    unicode-range: 'U+0400-04FF', 'U+0500-052F', 'U+2DE0-2DFF';
+}
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Bold.ttf") format("truetype");
+    font-weight: 700;
+    unicode-range: 'U+0400-04FF', 'U+0500-052F', 'U+2DE0-2DFF';
+}
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Light.ttf") format("truetype");
+    font-weight: 200;
+    unicode-range: 'U+0400-04FF', 'U+0500-052F', 'U+2DE0-2DFF';
+}
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+    font-weight: 400;
+}
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Quicksand';
+    font-family: 'Quicksand', sans-serif;
     background-color: #FAF1F1;
 }
 body{
