--- a/history/static/css/quiz_teacher_result.css
+++ b/history/static/css/quiz_teacher_result.css
@@ -24,7 +24,7 @@ body{
     width: 728px;
     height: 63px;
     
-    font-family: 'Quicksand';
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 50px;
@@ -117,7 +117,7 @@ body{
 
     background: #607C94;
 
-    font-family: 'Quicksand';
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -141,6 +141,7 @@ body{
 
     background: #607C94;
 
+
     order: 1;
     flex-grow: 1;
 }
@@ -149,7 +150,7 @@ body{
     width: 177px;
     height: 50px;
 
-    font-family: 'Quicksand';
+    font-family: 'Quicksand', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -199,7 +200,7 @@ background: #607C94;
 width: 388px;
 height: 50px;
 
-font-family: 'Quicksand';
+font-family: 'Quicksand', sans-serif;
 font-style: normal;
 font-weight: 700;
 font-size: 40px;
@@ -236,7 +237,7 @@ background: #607C94;
 width: 229px;
 height: 50px;
 
-font-family: 'Quicksand';
+font-family: 'Quicksand', sans-serif;
 font-style: normal;
 font-weight: 700;
 font-size: 40px;
@@ -292,7 +293,7 @@ background: #607C94;
 width: 41px;
 height: 44px;
 
-font-family: 'Quicksand';
+font-family: 'Quicksand', sans-serif;
 font-style: normal;
 font-weight: 700;
 font-size: 35px;
