--- a/home_app/templates/home.html
+++ b/home_app/templates/home.html
@@ -41,11 +41,11 @@
         
         <div class="quiz-pcs">
             <img src="{{ url_for('home_app.static', filename='img/quiz-img.png') }}">
-            <p>Simply quiz</p>
+            <p>Вікторина з математики</p>
         </div>
         <div class="quiz-pcs">
             <img src="{{ url_for('home_app.static', filename='img/quiz-img.png') }}">
-            <p>Simply quiz</p>
+            <p>Вікторина з англійскої</p>
         </div>
         <div class="quiz-pcs">
             <img src="{{ url_for('home_app.static', filename='img/quiz-img.png') }}">
