--- a/New_Quiz_App/static/css/New_Quiz_App_Student.css
+++ b/New_Quiz_App/static/css/New_Quiz_App_Student.css
@@ -3,6 +3,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 100vw;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .section {
@@ -15,6 +16,7 @@ main {
     justify-content: start;
     border: 1px solid;
     border-radius: 20px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .title-div {
@@ -25,6 +27,7 @@ main {
     width: 100%;
     height: 60px;
     border-bottom: 1px solid;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .title-p {
@@ -40,6 +43,7 @@ main {
     height: 840px;
     max-width: 1500px;
     overflow: hidden;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .new-quiz-content {
@@ -52,6 +56,7 @@ main {
     flex-grow: 1;
     width: 100%;
     height: 100%;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .fill-form-frame {
@@ -62,6 +67,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .answers-options-frame {
@@ -74,12 +80,14 @@ main {
     border-radius: 20px;
     gap: 30px;
     padding: 29px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .answer-container {
     position: relative;
     width: 217px;
     height: 300px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .answers-options-frame-blue,
@@ -126,6 +134,7 @@ main {
     border: 2px solid rgba(0, 0, 0, 0.5);
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.5);
+    font-family: 'Quicksand', sans-serif;
 }
 
 .answer-checkbox:checked {
@@ -141,4 +150,5 @@ main {
     transform: translate(-50%, -50%);
     color: white;
     font-size: 14px;
+    font-family: 'Quicksand', sans-serif;
 }
