--- a/New_Quiz_App/static/css/New_Quiz_Settings.css
+++ b/New_Quiz_App/static/css/New_Quiz_Settings.css
@@ -1,10 +1,11 @@
-main{
+main {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
+    font-family: 'Quicksand', sans-serif;
 }
-.section{
+.section {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -14,8 +15,9 @@ main{
     justify-content: start;
     border: 1px solid;
     border-radius: 20px;
+    font-family: 'Quicksand', sans-serif;
 }
-.title-div{
+.title-div {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -25,23 +27,26 @@ main{
     height: 60px;
     border-bottom: 1px solid;
     background: none;
+    font-family: 'Quicksand', sans-serif;
 }
-.title-p{
+.title-p {
     font-size: 34px;
+    font-family: 'Quicksand', sans-serif;
 }
 .div-content {
     display: flex;
     flex-direction: row;
-    gap: 12px; 
+    gap: 12px;
     padding: 10px;
     width: 100%;
     height: 840px;
     max-width: 1500px;
     background: none;
     overflow: hidden;
+    font-family: 'Quicksand', sans-serif;
 }
 
-.quiz-settings-content{
+.quiz-settings-content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,10 +57,10 @@ main{
     height: 100%;
     border: 2px solid black;
     border-radius: 20px;
-
+    font-family: 'Quicksand', sans-serif;
 }
 
-h1{
+h1 {
     font-size: 40px;
     color: black;
     font-family: 'Quicksand', sans-serif;
@@ -65,9 +70,10 @@ h1{
 .quiz-form {
     display: flex;
     flex-direction: column;
-    gap: 25px; 
+    gap: 25px;
     width: 100%;
     align-items: center;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .form-group {
@@ -78,9 +84,10 @@ h1{
     flex-direction: column;
     width: 100%;
     max-width: 420px;
+    font-family: 'Quicksand', sans-serif;
 }
 
-label{
+label {
     display: flex;
     text-align: left;
     font-size: 16px;
@@ -91,7 +98,7 @@ label{
     margin-bottom: 8px;
 }
 
-input{
+input {
     width: 420px;
     height: 45px;
     border-radius: 10px;
@@ -99,11 +106,12 @@ input{
     outline: none;
     font-size: 18px;
     padding-left: 10px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .image-upload {
-    width: 420px; 
-    height: 100px; 
+    width: 420px;
+    height: 100px;
     border: 1px dashed black;
     background-color: rgb(35, 130, 255, 0.5);
     border-radius: 10px;
@@ -116,18 +124,20 @@ input{
     align-items: center;
     cursor: pointer;
     gap: 10px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
-.upload-area{
+.upload-area {
+    background-color: transparent;
+    font-family: 'Quicksand', sans-serif;
+}
+
+img {
     background-color: transparent;
 }
 
-img{
-    background-color: transparent;
-}
-
-p{
+p {
     background-color: transparent;
     font-size: 16px;
     font-weight: 500;
@@ -136,7 +146,7 @@ p{
 }
 
 
-textarea{
+textarea {
     width: 420px;
     height: 45px;
     min-width: 420px;
@@ -148,23 +158,25 @@ textarea{
     outline: none;
     font-size: 18px;
     padding-left: 10px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 
-button{
+button {
     width: 210px;
     height: 48px;
-    border: 0px solid ;
-    border-radius: 10px;     
+    border: 0px solid;
+    border-radius: 10px;
     background-color: #2382FF;
     font-size: 18px;
     color: white;
     box-shadow: 0px 5px 10px 5px rgb(0 0 0 / 10%);
-    font-weight: bold ;
+    font-weight: bold;
     cursor: pointer;
+    font-family: 'Quicksand', sans-serif;
 }
 
-.image-preview{
+.image-preview {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -173,15 +185,16 @@ button{
     height: 579px;
     border-radius: 10px;
     border: 1px solid black;
+    font-family: 'Quicksand', sans-serif;
 }
 
-.quiz-image-preview{
+.quiz-image-preview {
     width: 100%;
     height: 480px;
 }
 
 
-.quiz-preview{
+.quiz-preview {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -191,9 +204,10 @@ button{
     border: 2px solid black;
     border-radius: 20px;
     gap: 40px;
+    font-family: 'Quicksand', sans-serif;
 }
 
-h2{
+h2 {
     font-size: 30px;
     color: black;
     font-family: 'Quicksand', sans-serif;
