--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -25,7 +25,7 @@
                             <a class="history-a text-decoration" href="/history">Quiz History</a>
                         </div>
                         <div class="new-quiz-div">
-                            <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
+                            <a class="new-quiz-a text-decoration" href="/new-quiz-settings">New Quiz</a>
                         </div>
                         <div class="account-a">
                             <a class="username-a text-decoration" href="/profile">{{ name }}</a>
