design-img-student

--- a/history/templates/quiz_student_result.html
+++ b/history/templates/quiz_student_result.html
@@ -51,9 +51,7 @@
                             <p class="answer-2">Відповідь</p>
                             <div class="all-answers">
                                 <div class="answer-choice-1">
-                                    <div class="frame-img-answer-choice-1">
-                                        <img class="img-answer-choice-1" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
-                                    </div>
+                                    <img class="img-answer-choice-1" src="{{ url_for('history.static', filename='img/done_circle_student.jpg') }}">
                                     <p class="text-answer-choice-1">11</p>
                                 </div>
                                 <div class="answer-choice-2">
@@ -112,15 +110,11 @@
                             <p class="answer-4">Відповідь</p>
                             <div class="all-answers-2">
                                 <div class="answer-choice-12">
-                                    <div class="frame-img-answer-choice-12">
-                                        <img class="img-answer-choice-12" src="{{ url_for('history.static', filename='img/done_circle.jpg') }}">
-                                    </div>
+                                    <img class="img-answer-choice-12" src="{{ url_for('history.static', filename='img/done_circle_student.jpg') }}">
                                     <p class="text-answer-choice-12">11</p>
                                 </div>
                                 <div class="answer-choice-22">
-                                    <div class="frame-img-answer-choice-22">
-                                        <img class="img-answer-choice-22" src="{{ url_for('history.static', filename='img/cross_circle.jpg') }}">
-                                    </div>
+                                    <img class="img-answer-choice-22" src="{{ url_for('history.static', filename='img/cross_circle_student.jpg') }}">
                                     <p class="text-answer-choice-22">22</p>
                                 </div>
                                 <div class="answer-choice-32">
