--- a/join/templates/join.html
+++ b/join/templates/join.html
@@ -8,27 +8,34 @@
 
 {% block main %}
 <div class="join-page">
-
-    
-
-    <div class="join-form">
-        <form method="post" >
+    <form method="post" class="join-form">
+        <div class="input-wrapper">
             <input type="text" name="join_code" placeholder="Enter join code" required>
-            <button type="submit">Join</button>
-        </form>
-    </div>
+            <button type="submit">⏎</button>
+        </div>
+    </form>
 
     <div class="passed-quizzes">
         <h2>Passed quizzes</h2>
         <div class="quiz-list">
+            <div class="quiz-card">
+                <img src="{{ url_for('join.static', filename='img/quiz-img.png') }}">
+                <h3>QUIZI</h3>
+                <p>Вікторина з математики</p>
+            </div>
             
             <div class="quiz-card">
                 <img src="{{ url_for('join.static', filename='img/quiz-img.png') }}">
-                
+                <h3>Вікторина з англійської мови</h3>
+                <p>Вікторина з програмування</p>
             </div>
             
+            <div class="quiz-card">
+                <img src="{{ url_for('join.static', filename='img/quiz-img.png') }}">
+                <h3>Вікторина з програмування</h3>
+                <p>Вікторина з програмування</p>
+            </div>
         </div>
     </div>
-
 </div>
 {% endblock %}
