--- a/history/templates/quiz_student_result.html
+++ b/history/templates/quiz_student_result.html
@@ -2,7 +2,11 @@
 
 {% block title %} Quiz Student Result {% endblock %}
 
-{% block head %} <link rel="stylesheet" href="{{ url_for('history.static', filename='css/quiz_student_result.css') }}">{% endblock %}
+{% block head %} 
+<link rel="stylesheet" href="{{ url_for('history.static', filename='css/quiz_student_result.css') }}">
+<script src="{{ url_for('history.static', filename='js/jquery-3.7.1.min.js') }}"></script>
+<script src="{{ url_for('history.static', filename='js/Quiz_Teacher_Result.js') }}"></script>
+{% endblock %}
 
 {% block main %} 
  <!-- Design -->
