--- a/user_apps/templates/authorization.html
+++ b/user_apps/templates/authorization.html
@@ -3,7 +3,7 @@
 {% block title %}Authorization{% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('authorization.static', filename='css/authorization.css') }}">
+<link rel="stylesheet" href="{{ url_for('user_apps.static', filename='css/authorization.css') }}">
 {% endblock %}
 
 {% block main %}
