--- a/user_apps/templates/registration.html
+++ b/user_apps/templates/registration.html
@@ -3,7 +3,7 @@
 {% block title %} Registration page {% endblock %}
 
 {% block head %} 
-<link rel="stylesheet" href="{{ url_for('registration.static', filename='css/registration.css') }}">
+<link rel="stylesheet" href="{{ url_for('user_apps.static', filename='css/registration.css') }}">
 {% endblock %}
 
 {% block main %}
