--- a/New_Quiz_App/templates/New_Quiz_App.html
+++ b/New_Quiz_App/templates/New_Quiz_App.html
@@ -27,7 +27,9 @@
             </button>
             
             <div class="scroll-frame">
+                
                 <div>#1 Fill form</div>
+                <div>{{ quiz.name }}</div>
                 <div>#2 Large selection</div>
                 <div>#3 Fill form</div>
                 <div>#4 Large selection</div>
