Fixed get data from "enter btn" and fixed json

--- a/New_Quiz_App/templates/New_Quiz_App.html
+++ b/New_Quiz_App/templates/New_Quiz_App.html
@@ -41,6 +41,7 @@
         </div>
 
         <div class="new-quiz-content">
+            <input type="hidden" id="quiz-name" value="{{ quiz_name }}">
             <div class="view-container">
                 <div class="view large-selection-view" data-view="large-selection">
                     <div class="fill-form-frame">
